scripts/nullaway/wpi/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8.txt
../wpi/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/entries/PosEntryClearKey.java:33: error: [NullAway] dereferenced expression store is @Nullable
            store.saveSale(sale);
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/entries/PosEntryClearKey.java:35: error: [NullAway] dereferenced expression store is @Nullable
            store.voidSale(sale);
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/Product.java:38: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.discount = null;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/sales/BasicSale.java:36: error: [NullAway] assigning @Nullable expression to @NonNull field
        customer = null;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/customer/PreferredCustomer.java:39: error: [NullAway] assigning @Nullable expression to @NonNull field
        discount = null;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/storage/FakePersistantCustomer.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.customer = null;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/storage/FakePersistantProduct.java:35: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.product = null;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/storage/FakePersistantDiscount.java:35: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.discount = null;
                      ^
    (see http://t.uber.com/nullaway )
8 errors
